a11y: Provide more wireless network information for ChromeVox.

The wireless network icon on the system tray has some information about
the signal strength which ChromeVox users miss out on.

Add a accessibility string in addition to convey the signal strength to
ChromeVox. The strings are weak, medium, strong and should match the
icon as well as possible.

Test: manual
Bug: 747468
Change-Id: Ib86ae9301a74342743fcf7e02aee874b18be4f15